<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/scan_circle"
        android:layout_width="@dimen/scan_circle_size"
        android:layout_height="@dimen/scan_circle_size"
        android:layout_gravity="center"
        android:contentDescription="@string/circle_button_content_desc"
        />

    <ImageView
        android:id="@+id/pulse_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/ring_pulse_desc"
        android:src="@drawable/ic_pulse_ring"/>

    <ImageButton
        android:id="@+id/start_scan_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@null"
        android:contentDescription="@string/circle_button_content_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bluetooth"/>

    <ImageButton
        android:id="@+id/stop_scan_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@null"
        android:contentDescription="@string/stop_button_content_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_button_stop"
        android:visibility="invisible"/>


</FrameLayout>
