<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/monitorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listview_beacons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toLeftOf="@+id/scan_circle"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />


    <ImageView
        android:id="@+id/scan_circle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/circle_button_content_desc"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pulse_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ring_pulse_desc"
        android:src="@drawable/ic_pulse_ring"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<ImageButton-->
    <!--android:id="@+id/start_scan_button"-->
    <!--android:layout_width="80dp"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="@null"-->
    <!--android:contentDescription="@string/circle_button_content_desc"-->
    <!--android:src="@drawable/bluetooth"-->
    <!--android:scaleType="centerInside"/>-->

    <ImageButton
        android:id="@+id/stop_scan_button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/stop_button_content_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bluetooth"
        android:visibility="invisible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/pulse_ring"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pulse_ring" />
</android.support.constraint.ConstraintLayout>